--- a/pom.xml
+++ b/pom.xml
@@ -54,17 +54,6 @@
 			<version>5.1.21</version>
 		</dependency>
 
-		<!-- servlet依赖. -->
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-		</dependency>
-
 		<!-- tomcat的支持.-->
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
@@ -75,16 +64,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
-
+		<!-- freemarker的支持-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-freemarker</artifactId>
 		</dependency>
-		<!--<dependency>
-			<groupId>freemarker</groupId>
-			<artifactId>freemarker</artifactId>
-			<version>2.3.9</version>
-		</dependency>-->
 	</dependencies>
 
 	<build>
