--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 
 	<groupId>com.luck</groupId>
 	<artifactId>spring-hwb</artifactId>
-	<version>1.0.0</version>
-	<packaging>war</packaging>
+	<version>1.0.4</version>
+	<packaging>jar</packaging>
 
 	<name>spring-hwb</name>
 	<description>Demo project for Spring Boot</description>
@@ -75,10 +75,21 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.46</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
 		<plugins>
+			<!-- 打包成可执行jar,防止中文乱码，必须要下面这一个插件  -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<encoding>utf-8</encoding>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
