--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,14 @@
 			<version>1.2.46</version>
 		</dependency>
 
+		<!-- alipay sdk -->
+		<!-- https://mvnrepository.com/artifact/com.alipay.sdk/alipay-sdk-java -->
+		<dependency>
+			<groupId>com.alipay.sdk</groupId>
+			<artifactId>alipay-sdk-java</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
