--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,15 @@ spring:
     template-loader-path: classpath:/templates
     prefix:
     suffix: .html
+  # thymeleaf
+  thymeleaf:
+    prefix:
+    suffix: .html
+    mode: HTML5
+    encoding: UTF-8
+    servlet:
+      content-type: text/html
+    cache: false
   http:
     encoding:
       force: true
@@ -22,9 +31,14 @@ spring:
     username: root
     password: 123456
     driver-class-name: com.mysql.jdbc.Driver
+    type: com.alibaba.druid.pool.DruidDataSource
   jpa:
     hibernate:
       ddl-auto: update
+  redis:
+        host: localhost
+        port: 6379
+        database: 0
 # mybatis配置
 mybatis:
   mapper-locations: classpath*:sqlmap/*Mapper.xml
